package view.view_interfaces;

import java.util.List;

/**
 *
 * @author Tymba
 *
 */
public interface IDevDao {

    public List<Object> getData(String tipo);
}
